Basic test scene

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,8 +9,8 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.interaction.toolkit": "0.10.0-preview.7",
     "com.unity.xr.interactionsubsystems": "1.0.1",
+    "com.unity.xr.oculus.standalone": "2.38.4",
     "com.unity.xr.openvr.standalone": "2.0.5",
-    "nz.ac.aut.sentiencelab": "file:../../../VersionControl/SentienceLab_UnityFramework",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
